--------------------
Bazaar Release Notes
--------------------

.. contents::


IN DEVELOPMENT
--------------

  CHANGES:

  NEW FEATURES:

    * New ``commit_message_template`` hook that is called by the commit 
      code to generate a template commit message. (Jelmer Vernooij)

    * New `shelve` and `unshelve` commands allow undoing and redoing changes.
      (Aaron Bentley)

  IMPROVEMENTS:

    * When making a large readv() request over ``bzr+ssh``, break up the
      request into more manageable chunks. Because the RPC is not yet able
      to stream, this helps keep us from buffering too much information at
      once. (John Arbash Meinel)

  BUG FIXES:

    * Better message when the user needs to set their Launchpad ID.
      (Martin Pool, #289148)

    * Don't call the system ``chdir()`` with an empty path. Sun OS seems
      to give an error in that case.  Also, don't count on ``getcwd()`` 
      being able to allocate a new buffer, which is a gnu extension.  
      (John Arbash Meinel, Martin Pool, Harry Hirsch, #297831)

    * Don't create text deltas spanning stacked repositories; this could
      cause "Revision X not present in Y" when later accessing them.
      (Martin Pool, #288751)

    * PermissionDenied errors from smart servers no longer cause
      "PermissionDenied: "None"" on the client.
      (Andrew Bennetts, #299254)
      
    * TooManyConcurrentRequests no longer occur when a fetch fails and
      tries to abort a write group.  This allows the root cause (e.g. a
      network interruption) to be reported.  (Andrew Bennetts, #297014)

    * RemoteRepository.get_parent_map now uses fallback repositories.
      (Aaron Bentley, #297991?, #293679?)

  DOCUMENTATION:

  API CHANGES:

    * Constructor parameters for NewPack (internal to pack repositories)
      have changed incompatibly.

    * ``Repository.abort_write_group`` now accepts an optional
      ``suppress_errors`` flag.  Repository implementations that override